cmake_minimum_required(VERSION 2.8.3)
project(frc-cpp-sim)
set(CMAKE_BUILD_TYPE debug)
if(CMAKE_SIZEOF_VOID_P MATCHES "8")
	# 64-bit
#	message("frc-cpp-sim is only 32-bit compatible.")
#	message("Make sure the 32-bit version libc/glibc is installed.")
#	set(CMAKE_CXX_FLAGS "-m32")
	message("64-bit support for frc-cpp-sim is experimental.")
	message("Technically, frc-cpp-sim as a whole is experimental")
	message("...but this is even more experimental.")
endif()
find_package(OpenCV REQUIRED)
add_definitions(-D__FRC_CPP_SIM__)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++0x -rdynamic")
set(FRC-CPP-SIM_ROOT ${PROJECT_SOURCE_DIR})
set(VXWORKS-SYSTEM_DIR ${FRC-CPP-SIM_ROOT}/vxworks-system)
set(WPILIB_DIR ${FRC-CPP-SIM_ROOT}/WPILib)
set(NIVISION_DIR ${FRC-CPP-SIM_ROOT}/nivision)
add_subdirectory(vxworks-system vxworks-system)
add_subdirectory(crio/fpga crio/fpga)
add_subdirectory(crio/ni-emb crio/ni-emb)
add_subdirectory(nivision nivision)
add_subdirectory(crio/ni-priv crio/ni-priv)
add_subdirectory(frccomm frccomm)
add_subdirectory(WPILib wpilib)
add_subdirectory(robot-code robot-code)
